# pexcz

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  build.zig  build.zig.zon  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
bench/: zipopen.zig
build-system/: pexcz_build.py  pexcz_legacy_editable.py  zig.py
python/pexcz/: __init__.py
python/tests/: test_pexcz_boot.py
scripts/: package.py
src/: clib.zig  lib.zig  main.zig  vendor.zig
src/lib/: Interpreter.zig  InterpreterConstraints.zig  Marker.zig  PexInfo.zig  ProjectName.zig  RankedTags.zig  Specifier.zig  Tag.zig  VenvPex.zig  Version.zig  Virtualenv.zig  WheelInfo.zig  Zip.zig  boot.zig  cache.zig  fs.zig  heap.zig  installed_wheel.zig  interpreter.py  interpreter.zig  os.zig  pep-425.zig  pep-427.zig  pep-503.zig  pep-508.zig  pex_info.zig  process.zig  string.zig  subprocess.zig  venv_pex.py  venv_pex_repl.py  zip.zig
src/lib/pep-508/: Marker.zig
src/python/pexcz/: __init__.py
src/python/tests/: test_pexcz_boot.py
src/zip/: main.zig  root.zig
tools/: fetch_virtualenv.zig  generate_zip_error_strings.py  generate_zip_error_strings.zig
